# trusted

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml
.github/workflows/: release.yml
crates/trusted/: Cargo.toml
crates/trusted-core/: Cargo.toml
crates/trusted-core/src/: cache.rs  config.rs  http_client.rs  lib.rs  osv.rs  policy.rs  progress.rs  terminal.rs  types.rs
crates/trusted-core/src/registry/: mod.rs  npm.rs  pypi.rs
crates/trusted-core/src/scan/: discover.rs  mod.rs  parse.rs
crates/trusted-core/tests/: config_test.rs  osv_batch_test.rs  osv_fixtures.rs  policy_test.rs  scan_parse_test.rs
crates/trusted-shim/: Cargo.toml
crates/trusted-shim/src/: dispatch.rs  exec.rs  lib.rs  run.rs
crates/trusted-shim/src/adapter/: cargo.rs  go.rs  mod.rs  npm.rs  pip.rs  pnpm.rs  uv.rs
crates/trusted/src/: main.rs
