[workspace]
resolver = "2"
members = ["crates/trusted", "crates/trusted-core", "crates/trusted-shim"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/shakedzychlinski/trusted"
authors = ["Shaked Zychlinski"]

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "io-util"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
semver = "1"
urlencoding = "2"
async-trait = "0.1"
owo-colors = "4"
futures = "0.3"

trusted-core = { path = "crates/trusted-core" }
trusted-shim = { path = "crates/trusted-shim" }
