[package]
name = "trusted-shim"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Package manager shims for trusted"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
trusted-core.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile = "3"
