[package]
name = "trusted"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Install-time package safety guard"
readme = "../../README.md"

[[bin]]
name = "trusted"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
trusted-core.workspace = true
trusted-shim.workspace = true
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
serde_json.workspace = true
toml.workspace = true
